--- a/Deprocrastinator/Base.lproj/Main.storyboard
+++ b/Deprocrastinator/Base.lproj/Main.storyboard
@@ -1,25 +1,121 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="JNf-DY-ufu">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="82" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="5U3-S9-cwm">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReminderCell" rowHeight="82" id="dqW-if-c52">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dqW-if-c52" id="aTy-45-afm">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                        <gestureRecognizers/>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="vXZ-lx-hvc" id="ZpD-Qr-npX"/>
+                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="S1R-BR-ROx"/>
+                                </connections>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jGF-L8-iek">
+                                <rect key="frame" x="274" y="64" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="rIi-vY-jKc"/>
+                                    <constraint firstAttribute="width" constant="30" id="tUH-as-2ac"/>
+                                </constraints>
+                                <state key="normal" title="Add">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="onAddButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="ogL-XI-uet"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dIL-dF-Roa">
+                                <rect key="frame" x="8" y="64" width="258" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Cv6-H7-0YE"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="5U3-S9-cwm" firstAttribute="top" secondItem="dIL-dF-Roa" secondAttribute="bottom" constant="-94" id="2d9-TS-WE2"/>
+                            <constraint firstItem="5U3-S9-cwm" firstAttribute="top" secondItem="jGF-L8-iek" secondAttribute="bottom" constant="-94" id="57B-j2-bP6"/>
+                            <constraint firstAttribute="trailing" secondItem="5U3-S9-cwm" secondAttribute="trailing" id="6NG-0b-ewR"/>
+                            <constraint firstItem="5U3-S9-cwm" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="BeC-4U-g7Y"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="5U3-S9-cwm" secondAttribute="bottom" id="Ch9-Qx-xnf"/>
+                            <constraint firstItem="jGF-L8-iek" firstAttribute="leading" secondItem="5U3-S9-cwm" secondAttribute="trailing" constant="-46" id="R93-DM-0Gh"/>
+                            <constraint firstItem="dIL-dF-Roa" firstAttribute="leading" secondItem="5U3-S9-cwm" secondAttribute="trailing" constant="-312" id="bww-Nf-YLc"/>
+                            <constraint firstItem="5U3-S9-cwm" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="dSq-bL-NpN"/>
+                            <constraint firstItem="jGF-L8-iek" firstAttribute="leading" secondItem="dIL-dF-Roa" secondAttribute="trailing" constant="8" id="zfS-lY-YaP"/>
+                        </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="AoX-hy-aYk" appends="YES" id="8ze-75-Rwn"/>
+                        </connections>
                     </view>
+                    <navigationItem key="navigationItem" id="xxO-dE-Yav">
+                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="OOU-BS-hk2">
+                            <connections>
+                                <action selector="onEditButtonPress:" destination="vXZ-lx-hvc" id="2dE-vK-eBG"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="taskTableView" destination="5U3-S9-cwm" id="Img-86-1zu"/>
+                        <outlet property="taskTextField" destination="dIL-dF-Roa" id="Jya-tb-y4J"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
+                <swipeGestureRecognizer direction="right" id="AoX-hy-aYk">
+                    <connections>
+                        <action selector="swipeHandler:" destination="vXZ-lx-hvc" id="WZa-S2-D44"/>
+                    </connections>
+                </swipeGestureRecognizer>
             </objects>
+            <point key="canvasLocation" x="540" y="368"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Pv4-kc-6Et">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="JNf-DY-ufu" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="3ea-rT-gaz">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="211-g2-qnw"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qw7-a8-8A8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="162" y="368"/>
         </scene>
     </scenes>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
